@@ -1,5 +1,10 @@
 2017-10-05  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_functions.js:
+	Define saveAttrForItem function.
+	Define saveAttrForItems function.
+	Define restoreItemAttrs function.
+
 	* tryXpath/css/try_xpath_insert.css
 	Modify this file.
 
